RESOLVED FIXED 193395
REGRESSION(r239915): about 130 test failures on WPE
https://bugs.webkit.org/show_bug.cgi?id=193395
Summary REGRESSION(r239915): about 130 test failures on WPE
Zan Dobersek
Reported 2019-01-14 04:04:02 PST
Attachments
Patch (4.86 KB, patch)
2019-01-14 04:21 PST, Carlos Garcia Campos
mcatanzaro: review-
ews-watchlist: commit-queue-
Archive of layout-test-results from ews103 for mac-highsierra (2.57 MB, application/zip)
2019-01-14 05:22 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews104 for mac-highsierra-wk2 (2.75 MB, application/zip)
2019-01-14 05:35 PST, EWS Watchlist
no flags
Patch (4.80 KB, patch)
2019-01-14 05:58 PST, Carlos Garcia Campos
no flags
Patch (4.98 KB, patch)
2019-01-21 01:19 PST, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2019-01-14 04:21:10 PST
EWS Watchlist
Comment 2 2019-01-14 05:22:35 PST
Comment on attachment 359029 [details] Patch Attachment 359029 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/10743145 New failing tests: fast/text/soft-hyphen-min-preferred-width.html fast/text/format-control.html
EWS Watchlist
Comment 3 2019-01-14 05:22:37 PST
Created attachment 359031 [details] Archive of layout-test-results from ews103 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 4 2019-01-14 05:35:21 PST
Comment on attachment 359029 [details] Patch Attachment 359029 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/10743172 New failing tests: fast/text/soft-hyphen-min-preferred-width.html fast/text/format-control.html
EWS Watchlist
Comment 5 2019-01-14 05:35:24 PST
Created attachment 359032 [details] Archive of layout-test-results from ews104 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
Michael Catanzaro
Comment 6 2019-01-14 05:56:21 PST
Comment on attachment 359029 [details] Patch New failing tests: fast/text/soft-hyphen-min-preferred-width.html fast/text/format-control.html
Carlos Garcia Campos
Comment 7 2019-01-14 05:58:25 PST
Created attachment 359033 [details] Patch Made the change specific to FreeType to fix the test failures in mac.
Zan Dobersek
Comment 8 2019-01-15 00:15:00 PST
Comment on attachment 359033 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=359033&action=review > Source/WebCore/platform/graphics/WidthIterator.cpp:206 > + bool characterMustDrawSomething = !isDefaultIgnorableCodePoint(character); > +#if USE(FREETYPE) > + if (!characterMustDrawSomething) { > + textIterator.advance(advanceLength); > + continue; > + } > +#endif This treats ignorable characters as if there's no glyph representing such characters in font data. Can't this logic be used in GlyphPage::fill(), enforcing no glyph representation for characters that are ignorable?
Carlos Garcia Campos
Comment 9 2019-01-15 00:28:34 PST
(In reply to Zan Dobersek from comment #8) > Comment on attachment 359033 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=359033&action=review > > > Source/WebCore/platform/graphics/WidthIterator.cpp:206 > > + bool characterMustDrawSomething = !isDefaultIgnorableCodePoint(character); > > +#if USE(FREETYPE) > > + if (!characterMustDrawSomething) { > > + textIterator.advance(advanceLength); > > + continue; > > + } > > +#endif > > This treats ignorable characters as if there's no glyph representing such > characters in font data. Can't this logic be used in GlyphPage::fill(), > enforcing no glyph representation for characters that are ignorable? No, that's what broke emoji sequences, see bug #177040. In GlyphPage::fill() we now replace ignorable characters with zero width space only when the font doesn't have a glyph, assuming that they will be handled or ignored later when shaping (as harfbuzz does). But the simple text code path is only ignoring them when they don't have a glyph. I think they should never be rendered even if they have a glyph.
Carlos Garcia Campos
Comment 10 2019-01-21 01:19:36 PST
Carlos Garcia Campos
Comment 11 2019-01-21 02:14:06 PST
Note You need to log in before you can comment on or make changes to this bug.