Source/WebCore/platform/text/CharacterProperties.h
@@ -106,4 +106,9 @@ inline bool isEmojiModifierBase(UChar32 character)
 #endif
 }
 
+inline bool isDefaultIgnorableCodePoint(UChar32 character)
+{
+    return u_hasBinaryProperty(character, UCHAR_DEFAULT_IGNORABLE_CODE_POINT);
+}
+
 }
